updating select boxes

--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@
           <div class="d-none d-lg-block col-6 col-md-4 col-lg-3">
             <div class="input__select d-lg-none">
               <div class="input__select-container">
+                <!-- A La Carte select box -->
                 <select id="aLaCarteSelectBox">
-                  <option value="aLaCarte" selected="selected">A La Carte</option>
-                  <option value="basic" class="d-none" disabled="true" hidden="true" aria-hidden="true">
-                    Basic</option>
-                  <option value="plus" class="d-none" disabled="true" hidden="true" aria-hidden="true">Plus
-                  </option>
-                  <option value="premier" class="d-none" disabled="true" hidden="true"
-                    aria-hidden="true">Premier</option>
+                  <option value="aLaCarte" class="" selected="selected">A La Carte</option>
+                  <option value="basic" class="">Basic</option>
+                  <option value="plus" class="">Plus</option>
+                  <option value="premier" class="">Premier</option>
                 </select>
               </div>
             </div>
@@ -53,13 +51,12 @@
           <div class="col-6 col-md-4 col-lg-3">
             <div class="input__select d-lg-none">
               <div class="input__select-container">
+                <!-- Basic select box -->
                 <select id="basicSelectBox">
-                  <option value="aLaCarte">A La Carte</option>
-                  <option value="basic" selected="selected">Basic</option>
-                  <option value="plus" class="d-none" value="plus" disabled="true" hidden="true" aria-hidden="true">Plus
-                  </option>
-                  <option value="premier" class="d-none" value="premier" disabled="true" hidden="true"
-                    aria-hidden="true">Premier</option>
+                  <option value="aLaCarte" class="">A La Carte</option>
+                  <option value="basic" class="" selected="selected">Basic</option>
+                  <option value="plus" class="">Plus</option>
+                  <option value="premier" class="">Premier</option>
                 </select>
               </div>
             </div>
@@ -75,13 +72,12 @@
           <div class="col-6 col-md-4 col-lg-3">
             <div class="input__select d-lg-none">
               <div class="input__select-container">
+                <!-- Plus select box -->
                 <select id="plusSelectBox">
-                  <option value="aLaCarte">A La Carte</option>
-                  <option value="basic" class="d-none" value="plus" disabled="true" hidden="true" aria-hidden="true">
-                    Basic</option>
-                  <option value="plus" selected="selected">Plus</option>
-                  <option value="premier" class="d-none" value="premier" disabled="true" hidden="true"
-                    aria-hidden="true">Premier</option>
+                  <option value="aLaCarte" class="">A La Carte</option>
+                  <option value="basic" class="">Basic</option>
+                  <option value="plus" class="" selected="selected">Plus</option>
+                  <option value="premier" class="">Premier</option>
                 </select>
               </div>
             </div>
@@ -102,13 +98,12 @@
           <div class="d-none d-md-block col-6 col-md-4 col-lg-3">
             <div class="input__select d-lg-none">
               <div class="input__select-container">
+                <!-- Premier select box -->
                 <select id="premierSelectBox">
-                  <option value="aLaCarte">A La Carte</option>
-                  <option value="basic" class="d-none" value="plus" disabled="true" hidden="true" aria-hidden="true">
-                    Basic</option>
-                  <option value="plus" class="d-none" value="premier" disabled="true" hidden="true" aria-hidden="true">
-                    Plus</option>
-                  <option value="premier" selected="selected">Premier</option>
+                  <option value="aLaCarte" class="">A La Carte</option>
+                  <option value="basic" class="">Basic</option>
+                  <option value="plus" class="">Plus</option>
+                  <option value="premier" class="" selected="selected">Premier</option>
                 </select>
               </div>
             </div>
