generic select box ids | capturing select box shange

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="input__select d-lg-none">
               <div class="input__select-container">
                 <!-- A La Carte select box -->
-                <select id="aLaCarteSelectBox">
+                <select id="selectBoxA">
                   <option value="aLaCarte" class="" selected="selected">A La Carte</option>
                   <option value="basic" class="">Basic</option>
                   <option value="plus" class="">Plus</option>
@@ -52,7 +52,7 @@
             <div class="input__select d-lg-none">
               <div class="input__select-container">
                 <!-- Basic select box -->
-                <select id="basicSelectBox">
+                <select id="selectBoxB">
                   <option value="aLaCarte" class="">A La Carte</option>
                   <option value="basic" class="" selected="selected">Basic</option>
                   <option value="plus" class="d-none">Plus</option>
@@ -73,7 +73,7 @@
             <div class="input__select d-lg-none">
               <div class="input__select-container">
                 <!-- Plus select box -->
-                <select id="plusSelectBox">
+                <select id="selectBoxC">
                   <option value="aLaCarte" class="">A La Carte</option>
                   <option value="basic" class="d-none">Basic</option>
                   <option value="plus" class="" selected="selected">Plus</option>
@@ -99,7 +99,7 @@
             <div class="input__select d-lg-none">
               <div class="input__select-container">
                 <!-- Premier select box -->
-                <select id="premierSelectBox">
+                <select id="selectBoxD">
                   <option value="aLaCarte" class="">A La Carte</option>
                   <option value="basic" class="d-md-none">Basic</option>
                   <option value="plus" class="d-md-none">Plus</option>
