--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://caasco.com/scripts/scripts.min.js?v=637842717640000000"></script>
+  <!-- <script src="https://caasco.com/scripts/scripts.min.js?v=637842717640000000"></script> -->
 
   <script src="js/data.js" defer></script>
   <script src="js/main.js" defer></script>
