--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <select id="selectBoxB">
                   <option value="aLaCarte" class="">A La Carte</option>
                   <option value="basic" class="" selected="selected">Basic</option>
-                  <option value="plus" class="d-none">Plus</option>
-                  <option value="premier" class="d-md-none">Premier</option>
+                  <option value="plus" class="">Plus</option>
+                  <option value="premier" class="">Premier</option>
                 </select>
               </div>
             </div>
@@ -75,9 +75,9 @@
                 <!-- Plus select box -->
                 <select id="selectBoxC">
                   <option value="aLaCarte" class="">A La Carte</option>
-                  <option value="basic" class="d-none">Basic</option>
+                  <option value="basic" class="">Basic</option>
                   <option value="plus" class="" selected="selected">Plus</option>
-                  <option value="premier" class="d-md-none">Premier</option>
+                  <option value="premier" class="">Premier</option>
                 </select>
               </div>
             </div>
@@ -101,8 +101,8 @@
                 <!-- Premier select box -->
                 <select id="selectBoxD">
                   <option value="aLaCarte" class="">A La Carte</option>
-                  <option value="basic" class="d-md-none">Basic</option>
-                  <option value="plus" class="d-md-none">Plus</option>
+                  <option value="basic" class="">Basic</option>
+                  <option value="plus" class="">Plus</option>
                   <option value="premier" class="" selected="selected">Premier</option>
                 </select>
               </div>
