dynamically display best value

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </select>
               </div>
             </div>
+            <div class="valueContainer"></div>
             <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
             <img class="membership-card__card-image card-image" src="-" alt="CAA A La Carte Membership Card">
@@ -60,6 +61,7 @@
                 </select>
               </div>
             </div>
+            <div class="valueContainer"></div>
             <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
             <img class="membership-card__card-image card-image" src="-" alt="CAA Basic Membership Card">
@@ -81,7 +83,7 @@
                 </select>
               </div>
             </div>
-            <div class="rounded text-center p-1 bg-primary text-white">Best Value</div>
+            <div class="valueContainer"></div>
             <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
             <img class="membership-card__card-image card-image" src="-" alt="CAA Plus Membership Card">
@@ -107,6 +109,7 @@
                 </select>
               </div>
             </div>
+            <div class="valueContainer"></div>
             <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
             <img class="membership-card__card-image card-image" src="-" alt="CAA Premier Membership Card">
