dynamically hide / show best value and rv option

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 class="button button--primary compare-cards__cta"
                 data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
+            <div class="rvOption"></div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
             <div class="input__select d-lg-none">
@@ -70,6 +71,7 @@
                 data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta"
                 data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
+            <div class="rvOption"></div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
             <div class="input__select d-lg-none">
@@ -92,6 +94,7 @@
                 data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta"
                 data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
+            <div class="rvOption">
             <div>
               <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
               <label for="vehicle1">RV option for $67/year more</label>
@@ -118,6 +121,7 @@
                 data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta"
                 data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
+            <div class="rvOption">
             <div>
               <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
               <label for="vehicle1">RV option for $62/year more</label>
