--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <section class="compare-membership">
-    <div class="compare-membership__top">
+    <div class="compare-membership__top sticky-top bg-white">
       <div class="container-fluid">
         <div class="row">
           <div class="d-none d-lg-block col-6 col-md-4 col-lg-3">
