dump for bitbucket

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
             <div class="rvOption">
-            <div>
+              <!-- ☝️ UPDATE THE CHECKBOX ATTRIBUTES -->
               <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
               <label for="vehicle1">RV option for $67/year more</label>
             </div>
@@ -122,7 +122,7 @@
                 data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
             <div class="rvOption">
-            <div>
+              <!-- ☝️ UPDATE THE CHECKBOX ATTRIBUTES -->
               <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
               <label for="vehicle1">RV option for $62/year more</label>
             </div>
